8305755: [JVMCI] missing barriers in CompilerToVM.readFieldValue for Reference.referent